fix: set github user

--- a/.github/workflows/update-v8.yml
+++ b/.github/workflows/update-v8.yml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65  # v4.0.0
         with:
           node-version: ${{ env.NODE_VERSION }}
+      - run: |
+           git config --global user.email "github-bot@iojs.org"
+           git config --global user.name "Node.js GitHub Bot"  
       - name: Install @node-core/utils
         run: npm install -g @node-core/utils
       - name: Check and download new V8 version
